Fixed bug where back button for pop-up images was offscreen
Former-commit-id: f43bd32aca162b92233a6ac094979da7b3a7023d [formerly 786f816ae129aa6ed5b2a8481d41f1d44f8eb0f5]
Former-commit-id: a7e41a9f84f2ae8b6c3f855042acf4b92e1bbac0

--- a/css/Volcano.css
+++ b/css/Volcano.css
@@ -57,6 +57,10 @@
   z-index: 6;
 }
 
+.img_popup{
+
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
